refactor: 추천 캐시 및 이벤트 핸들링 로직 삭제
- RecommendationCacheService 및 RecommendationEventHandler 클래스 제거
- 불필요한 캐싱 및 이벤트 로직 삭제로 코드 간소화
- ProductMapper 및 MemberMapper의 불필요한 필드 및 쿼리 수정
- Conversation 엔티티의 읽기 전용 콜렉션 메서드 제거
- RecommendationEngine 클래스 리팩토링 및 단순화
- CLAUDE.md 수정하여 시스템 구성 변경 사항 반영